--- a/home.html
+++ b/home.html
@@ -3,11 +3,17 @@
     <head>
         <title>HOME PAGE</title>
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Orbitron">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Parisienne">
+        <ling rel="stylesheet" href="https://fonts.googleapis.com/css?family=Herr+Von+Muellerhoff">
     </head>
     <body>
         <div class="container">
             <div class="nav-wrapper">
                 <div class="left-side">
+                    <div class="nav-links">
+                        <h2>DS</h2>
+                    </div>
                     <div class="nav-links">
                         <a href="home.html">HOME</a>
                     </div>
@@ -17,7 +23,7 @@
                     <div class="nav-links">
                         <a href="contact.html">CONTACT</a>
                     </div>
-                </div>>
+                </div>
                 <div class="right-side">
                     <div class="nav-links">
                         <a href="login.html">LOG IN</a>
@@ -25,6 +31,21 @@
                     <div class="nav-links">    
                         <a href="register.html">REGISTER</a>
                     </div>
+                </div>
+            </div>
+            <div class="presentation-wrapper">
+                <div class="bkg-images">
+                    <figure>
+                        <img src = "images/bkg1.jpg">
+                        <img src = "images/bkg2.jpg">
+                        <img src = "images/bkg3.jpg">
+                        <img src = "images/bkg4.jpg">
+                    </figure>
+                </div>
+                <div class="presentation-text">
+                    <h1>Drive Select</h1>
+                    <h3>That wonderful feeling – you start the engine and your adventure begins…</h3>
+                    <a href="rent.html">Search a car</a>
                 </div>
             </div>
         </div>
